tests/baselines/reference/contextualTypingArrayOfLambdas(strict=true).errors.txt
contextualTypingArrayOfLambdas.ts(2,5): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
contextualTypingArrayOfLambdas.ts(6,5): error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
contextualTypingArrayOfLambdas.ts(10,5): error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.


==== contextualTypingArrayOfLambdas.ts (3 errors) ====
    class A {
        foo: string;
        ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    
    class B extends A {
        bar: string;
        ~~~
!!! error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
    }
    
    class C extends A {
        baz: string;
        ~~~
!!! error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.
    }
    
    var xs = [(x: A) => { }, (x: B) => { }, (x: C) => { }];
    